# nugie-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  compile.bat  compile.sh  compile_mesh_terrain.bat  compile_mesh_terrain.sh  main.cpp
src/: main.cpp  struct.hpp
src/app/: general_struct.hpp  mesh_shading_struct.hpp  path_tracing_struct.hpp
src/app/app/: app.cpp  app.hpp  mesh_shading_app.cpp  mesh_shading_app.hpp  path_tracing_app.cpp  path_tracing_app.hpp  terrain_app.cpp  terrain_app.hpp
src/app/camera/: camera.cpp  camera.hpp  path_tracing_camera.cpp  path_tracing_camera.hpp
src/app/renderer/: hybrid_renderer.cpp  hybrid_renderer.hpp  renderer.cpp  renderer.hpp
src/app/renderer_sub/: final_sub_renderer.cpp  final_sub_renderer.hpp  raytracing_sub_renderer.cpp  raytracing_sub_renderer.hpp  shadow_sub_renderer.cpp  shadow_sub_renderer.hpp  sub_renderer.cpp  sub_renderer.hpp
src/app/renderer_subpart/: deferred_subpart_renderer.cpp  deferred_subpart_renderer.hpp  final_subpart_renderer.cpp  final_subpart_renderer.hpp  forward_subpart_renderer.cpp  forward_subpart_renderer.hpp  point_shadow_subpart_renderer.cpp  point_shadow_subpart_renderer.hpp  shadow_subpart_renderer.cpp  shadow_subpart_renderer.hpp  spot_shadow_subpart_renderer.cpp  spot_shadow_subpart_renderer.hpp  terrain_subpart_renderer.cpp  terrain_subpart_renderer.hpp
src/app/renderer_system/: compute_render_system.cpp  compute_render_system.hpp  deferred_pass_render_system.cpp  deferred_pass_render_system.hpp  final_pass_render_system.cpp  final_pass_render_system.hpp  forward_pass_render_system.cpp  forward_pass_render_system.hpp  graphic_render_system.cpp  graphic_render_system.hpp  mesh_render_system.cpp  mesh_render_system.hpp  point_shadow_pass_render_system.cpp  point_shadow_pass_render_system.hpp  quad_graphic_render_system.cpp  quad_graphic_render_system.hpp  raygen_pass_render_system.cpp  raygen_pass_render_system.hpp  shadow_pass_render_system.cpp  shadow_pass_render_system.hpp  skybox_pass_render_system.cpp  skybox_pass_render_system.hpp  spot_shadow_pass_render_system.cpp  spot_shadow_pass_render_system.hpp  terrain_pass_render_system.cpp  terrain_pass_render_system.hpp
src/apps/: app.cpp  app.hpp
src/buffer/child/: child_buffer.cpp  child_buffer.hpp
src/buffer/master/: master_buffer.cpp  master_buffer.hpp
src/camera/: camera.cpp  camera.hpp
src/device/: device.cpp  device.hpp
src/gpu/: struct.hpp
src/render/: render.hpp  render_system.hpp  renderer.cpp  renderer.hpp
src/shader/: basic.mesh  basic.task  better_cube.mesh  buffer_cube.mesh  build_cluster.comp  cull_light.comp  deferred.frag  direct_ray_gen.comp  direct_ray_hit.comp  direct_sampler.comp  direct_shade.comp  final.frag  final.vert  forward.frag  forward.vert  forward_apple.frag  frustum_cull.comp  indirect_ray_gen.comp  indirect_ray_hit.comp  indirect_sampler.comp  indirect_shade.comp  integrator.comp  intersect_light.comp  intersect_object.comp  light_ray_hit.comp  light_shade.comp  mesh_shade.frag  mesh_shade.mesh  mesh_shade.vert  miss.comp  point_shadow_map.geom  point_shadow_map.vert  quad.vert  ray_closest_hit.comp  ray_gen.comp  ray_hit.comp  ray_intersect.comp  ray_intersection.comp  ray_miss.comp  ray_trace.comp  (+20 more)
src/window/: vulkan_window.hpp  window.hpp
(+288 files in other folders)
